# DnD

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
dnd_server/: Cargo.toml  Dockerfile
llm_wrapper/: Dockerfile  pyproject.toml  run.sh
protos/: hello.proto
