[tool.poetry]
name = "llm-wrapper"
version = "0.1.0"
description = ""
authors = ["Dominux <kir.gimranov@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
grpcio = "^1.58.0"
grpcio-tools = "^1.58.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
